Fix header alignment

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -65,6 +65,7 @@ a {
   position: relative;
   top: 6px;
   white-space: nowrap;
+  line-height: 100%;
 }
 .breadcrumbs a, .breadcrumbs a:visited, .breadcrumbs span {
   color: grey;
@@ -73,9 +74,9 @@ a {
 .breadcrumbs a:hover {
   color: black;
 }
-.logo-pad {
-  height: 40px;
-  float: left;
+.logo-padding {
+  display: inline-block;
+  height: 30px;
 }
 /* Override Bootstrap so the collapse occurs on sm (below 992px) instead of xs (below 768px) */
 @media (max-width: 991px) {
@@ -118,7 +119,7 @@ a {
 }
 @media (min-width: 992px) {
   .nav li {
-    border-bottom: 3px solid white;
+    border-bottom: 4px solid white;
   }
   .nav li:hover {
     border-bottom-color: black;
